// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. caption without credits 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "lineHeight": "17px",
        }
      }
    >
      Some caption text goes in here
    </div>
  </div>
</div>
`;

exports[`2. caption with credits 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "lineHeight": "17px",
        }
      }
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      dangerouslySetInnerHTML={
        Object {
          "__html": "JUST CREDITS",
        }
      }
      style={
        Object {
          "color": "#333333",
          "fontFamily": "Roboto-Regular",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 0.5,
          "lineHeight": "17px",
        }
      }
    />
  </div>
</div>
`;

exports[`3. caption with credits only 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      dangerouslySetInnerHTML={
        Object {
          "__html": "JUST CREDITS",
        }
      }
      style={
        Object {
          "color": "#333333",
          "fontFamily": "Roboto-Regular",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 0.5,
          "lineHeight": "17px",
        }
      }
    />
  </div>
</div>
`;

exports[`4. caption with child 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    Hello world!
  </div>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "lineHeight": "17px",
        }
      }
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      dangerouslySetInnerHTML={
        Object {
          "__html": "JUST CREDITS",
        }
      }
      style={
        Object {
          "color": "#333333",
          "fontFamily": "Roboto-Regular",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 0.5,
          "lineHeight": "17px",
        }
      }
    />
  </div>
</div>
`;

exports[`5. centred caption without credits 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "lineHeight": "17px",
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      Some caption text goes in here
    </div>
  </div>
</div>
`;

exports[`6. centred caption caption with credits 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "lineHeight": "17px",
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      dangerouslySetInnerHTML={
        Object {
          "__html": "JUST CREDITS",
        }
      }
      style={
        Object {
          "color": "#333333",
          "fontFamily": "Roboto-Regular",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 0.5,
          "lineHeight": "17px",
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    />
  </div>
</div>
`;

exports[`7. centred caption caption with credits only 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      dangerouslySetInnerHTML={
        Object {
          "__html": "JUST CREDITS",
        }
      }
      style={
        Object {
          "color": "#333333",
          "fontFamily": "Roboto-Regular",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 0.5,
          "lineHeight": "17px",
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    />
  </div>
</div>
`;

exports[`8. centred caption caption with child 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 lhcAkf"
  >
    Hello world!
  </div>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    style={
      Object {
        "paddingTop": "10px",
      }
    }
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "Roboto-Regular",
          "fontSize": 12,
          "lineHeight": "17px",
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      dangerouslySetInnerHTML={
        Object {
          "__html": "JUST CREDITS",
        }
      }
      style={
        Object {
          "color": "#333333",
          "fontFamily": "Roboto-Regular",
          "fontSize": 9,
          "fontWeight": "400",
          "letterSpacing": 0.5,
          "lineHeight": "17px",
          "paddingLeft": "10px",
          "paddingRight": "10px",
          "textAlign": "center",
        }
      }
    />
  </div>
</div>
`;
